# starter-python

./: Dockerfile  Makefile  README.md  backend.spec  pyproject.toml
backend/: main.py
starter_python/: main.py
