[tool.poetry]
name = "starter-python"
version = "0.1.0"
description = ""
authors = ["wear工程师 <1225186748@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
